netcfg (1.71) UNRELEASED; urgency=low

  [ Robert Millan ]
  * Ignore pfsync0, pflog0 and usbus0 devices on GNU/kFreeBSD.
  * Use 127.0.1.1 hack in /etc/hosts only on kernels that support it.
    (Closes: #649747)

  [ Samuel Thibault ]
  * Also probe /dev/eth* and wl* on hurd-i386.

 -- Robert Millan <rmh@debian.org>  Fri, 10 Feb 2012 23:38:43 +0100

netcfg (1.70) unstable; urgency=low

  [ Jurij Smakov ]
  * Don't try to compile wireless code on sparc, fixing FTBFS introduced
    by (intentional) dropping of libiw-dev build dependency. 

 -- Jurij Smakov <jurij@debian.org>  Fri, 04 Nov 2011 20:53:05 +0000

netcfg (1.69) unstable; urgency=low

  [ Colin Watson ]
  * armhf was accidentally removed from the Architecture field while merging
    the WPA branch.  Restore it.
  * Explicitly ignore some errors to placate -Wunused-result.
  * Adjust start_dhcp_client to placate -Wformat-security.
  * Handle failure to read a pid from the wpasupplicant pid file.
  * Don't log "Starting netcfg" messages when invoked as ptom.

  [ Holger Wansing ]
  * Mention WPA2 in debconf templates as it is also supported. Also
    explain the PSK acronym.
    Closes: #637467

  [ Philipp Kern ]
  * Add s390x support.  (No wireless.)

  [ Jurij Smakov ]
  * Drop dependency on wpasupplicant and crypto-modules on sparc to get
    netboot image size under 10MB, otherwise it doesn't boot.

 -- Jurij Smakov <jurij@debian.org>  Wed, 02 Nov 2011 06:46:19 +0000

netcfg (1.68) unstable; urgency=low

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Basque (eu.po)
  * French (fr.po) by Christian Perrier

 -- Christian Perrier <bubulle@debian.org>  Mon, 08 Aug 2011 09:05:58 +0200

netcfg (1.67) unstable; urgency=low

  * Reuploading with all the translations

 -- Gaudenz Steinlin <gaudenz@debian.org>  Sun, 31 Jul 2011 11:21:26 +0200

netcfg (1.66) unstable; urgency=low

  [ Colin Watson ]
  * Strip trailing dots from domain when writing to /etc/hosts
    (LP: #255117).
