@@ -8,6 +8,10 @@ netcfg (1.71) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * Also probe /dev/eth* and wl* on hurd-i386.
 
+  [ Sorina Sandu ]
+  * Fix debconf backup capability handling.
+    (Closes: #636211)
+
  -- Robert Millan <rmh@debian.org>  Fri, 10 Feb 2012 23:38:43 +0100
 
 netcfg (1.70) unstable; urgency=low
